--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ serde_json = "1.0.96"
 spki = "0.6.0"
 thiserror = "1.0.40"
 zeroize = "1.6.0"
+worker = "0.0.17"
 
 [dev-dependencies]
 benchmark-simple = "0.1.7"
