--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,16 +32,20 @@ worker = "0.0.18"
 zeroize = "1.7.0"
 
 [target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
-boring = "4.2.0"
+boring = { version = "4.2.0", optional = true }
+superboring = { version = "0.1.2", optional = true }
 
 [target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
-superboring = "0.1.0"
+superboring = { version = "0.1.2" }
 
 [dev-dependencies]
 benchmark-simple = "0.1.8"
 
 [features]
+default = ["optimal"]
 cwt = ["ciborium"]
+optimal = ["boring"]
+pure-rust = ["superboring"]
 
 [[bench]]
 name = "benchmark"
