--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,10 @@ rand = "0.8.5"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 thiserror = "1.0.56"
-worker = "0.0.18"
 zeroize = "1.7.0"
+worker = "0.1.0"
+rsa = "0.7.2"
+spki = "0.6.0"
 
 [target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
 boring = { version = "4.5.0", optional = true }
